# ZT-Service-Registry-CPP

./: .gitignore  CMakeLists.txt  README.md  build.sh  launch.sh
config/: config.json  database.json  database_example_all.json  database_test.json  database_test_2.json  standby.json
example/: Header.cpp  Header.h  boardcast  boardcast.cpp  build_example.sh  example.json  launch_example.sh
message_example/: header.json  heartbeat.json  manage.json  manage_response.json  matadata_response.json  metadata.json  query.json  query_response.json  register.json  register_new.json  register_old.json  register_response.json  z_test_json.c
src/: JsonProcess.c  JsonProcess.h  main.cpp  z_test.c  z_test.json
src/com/: UDPConnector.cpp  UDPConnector.h
src/communication/: UDPConnector.cpp  UDPConnector.h
src/config/: Config.cpp  Config.h  ConfigUtil.cpp
src/constant/: globals.cpp  globals.h
src/controller/: RequestController.cpp  RequestController.h
src/dao/: LocalDatabaseDao.cpp  LocalDatabaseDao.h
src/database/: LocalDatabase.cpp  LocalDatabase.h
src/model/: RequestInfo.cpp  RequestInfo.h  ResponseInfo.h
src/model/entity/: Header.cpp  Header.h
src/service/: DBService.cpp  DBService.h  HeartbeatService.cpp  HeartbeatService.h  MetadataService.cpp  MetadataService.h  QueryService.cpp  QueryService.h  RegisterService.cpp  RegisterService.h  RequestService.cpp  RequestService.h  ResponseService.cpp  ResponseService.h  Service.cpp  Service.h
src/utils/: DBUtil.cpp  DBUtil.h  Util.cpp  Util.h
